Changes to Watch List, Posts feed in Home & changes in profile,company and news in details route

--- a/src/app/stocks/company-info/company-info.component.html
+++ b/src/app/stocks/company-info/company-info.component.html
@@ -1,5 +1,34 @@
 <div>
-    <mat-grid-list cols="6" rowHeight="50px">
+    <div class="info-container">
+      <div class="info-tile">
+        <h4>EXCHANGE</h4>
+        <span>{{companyData?.exchange}}</span>
+      </div>
+      <div class="info-tile">
+          <h4>CEO</h4>
+          <span>{{companyData?.CEO}}</span>
+      </div>
+      <div class="info-tile">
+          <h4>EMPLOYEES</h4>
+          <span>{{companyData?.employees | number}}</span>
+      </div>
+      
+    </div>
+    <div class="info-container">
+        <div class="info-tile">
+            <h4>SECTOR</h4>
+          <span>{{companyData?.sector}}</span>
+        </div>
+        <div class="info-tile">
+            <h4>INDUSTRY</h4>
+            <span>{{companyData?.industry}}</span>
+        </div>
+        <div class="info-tile">
+            <h4>WEBSITE</h4>
+            <span class="blue-color" (click)="open(company.website)">{{company?.website}}</span>
+        </div>
+    </div>
+    <!--mat-grid-list cols="6" rowHeight="50px">
         <mat-grid-tile
             *ngFor="let tile of tiles"
             [colspan]="tile.cols"
@@ -16,6 +45,6 @@
                 </dd>
             </dl>
           </mat-grid-tile>
-      </mat-grid-list>
+      </mat-grid-list-->
 
 </div>
