--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       </div>
       <td-layout-footer>
         <div layout="row" layout-align="start center">
-          <span class="mat-caption">Copyright &copy; 2017 Teradata. All rights reserved</span>
+          <span class="mat-caption">Copyright &copy; 2019 ABC Investment Research. All rights reserved</span>
         </div>
       </td-layout-footer>
     </td-layout-nav>
