--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,20 @@
        
         <span [routerLink]="['/']" class="cursor-pointer">ABC Investment Research</span>
         <span flex></span>
-        <!--a mat-icon-button matTooltip="Docs" href="https://teradata.github.io/covalent/" target="_blank"><mat-icon>chrome_reader_mode</mat-icon></a>
-        <a mat-icon-button matTooltip="Github" href="https://github.com/teradata/covalent" target="_blank"><mat-icon svgIcon="assets:github"></mat-icon></a-->
+        
+        <a mat-icon-button matTooltip="Github" href="javascript:void(0);" (click)="showSearchBar = !showSearchBar"><mat-icon>search</mat-icon></a>
+          
+        <mat-form-field [floatLabel]="'never'" *ngIf="showSearchBar">
+          <input matInput placeholder="Search Stock" aria-label="Stock"  [matAutocomplete]="auto" [formControl]="stockCtrl" >
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let stock of filteredStocks | async" [value]="stock.symbol" (click)="openStockDetailsPage(stock.stockSymbol)">
+              <span>{{stock.companyName}} ({{stock.stockSymbol}})</span>
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
       </div>
       <div>
-        <router-outlet></router-outlet>
+        <!--router-outlet></router-outlet-->
       </div>
       <td-layout-footer>
         <div layout="row" layout-align="start center">
