Added Error Page, Not found page, Some minor changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
         </mat-form-field>
       </div>
       <div>
-        <!--router-outlet></router-outlet-->
+        <router-outlet></router-outlet>
       </div>
       <td-layout-footer>
         <div layout="row" layout-align="start center">
