Changes to company-info

--- a/src/app/stocks/company-info/company-info.component.html
+++ b/src/app/stocks/company-info/company-info.component.html
@@ -25,7 +25,7 @@
         </div>
         <div class="info-tile">
             <h4>WEBSITE</h4>
-            <span class="blue-color" (click)="open(company.website)">{{company?.website}}</span>
+            <span class="blue-color" (click)="open(companyData.website)">{{companyData.website}}</span>
         </div>
     </div>
     <!--mat-grid-list cols="6" rowHeight="50px">
